-Added the template tab view -its probably because its late but the label thing won’t connect need to fix

--- a/FirstImpressions/Storyboard.storyboard
+++ b/FirstImpressions/Storyboard.storyboard
@@ -616,6 +616,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="ArT-rh-oVm"/>
+        <segue reference="Shm-Kn-jIc"/>
     </inferredMetricsTieBreakers>
 </document>
